--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   flutter_image_compress: ^2.0.4
   uuid: ^3.0.7
-  http: 0.13.5
+  http: ^1.2.1
   path_provider: ^2.1.1
   path: ^1.8.3
   pedantic: ^1.11.1
